# bilingual-excel-sync

./: .editorconfig  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  CHANGELOG.md  CHEAT_SHEET.md  CONTRIBUTING.md  FAQ.md  GETTING_STARTED.md  GLOSSARY.md  HOW_TO_USE.md  INDEX.md  INSTALL.md  LICENSE  Makefile  PERFORMANCE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_CN.md  SKILL.md  TABLE_OF_CONTENTS.md  TROUBLESHOOTING.md  TUTORIAL.md  USAGE.md  USAGE_GUIDE.md  __init__.py  __main__.py  config.json  demo.py  example_使用示例.md  examples.py  pyproject.toml  setup.py  test_cases.py  test_example.py  test_integration.py  tox.ini
evals/: evals.json
scripts/: bilingual_excel_sync.py
